--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/yinyang"]
 	path = themes/yinyang
-	url = git@github.com:thomastay/hugo-theme-yinyang.git
+	url = https://github.com/thomastay/hugo-theme-yinyang.git
