Change to use params.author

--- a/config.toml
+++ b/config.toml
@@ -14,7 +14,7 @@ theme = "yinyang"
     style = "monokai"
     tabWidth = 4
 
-[author]
+[params.author]
 name = "Thomas"
 homepage = "https://thomastay.dev/"
 
